force-app/main/default/objects/mcdm_15__ObjectPlugin__c/mcdm_15__ObjectPlugin__c.object-meta.xml
<CustomObject>
    <description>Junction object for Quick Send Journey or Campaign to Journey Approval Plugin (CPIs)</description>
    <label>DM CPI Link</label>
    <nameField>
        <displayFormat>DM CPI Link {00000}</displayFormat>
        <label>DM CPI Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DM CPI Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>