force-app/main/default/objects/mcdm_15__ObjectPlugin__c/fields/mcdm_15__Active__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Active__c</fullName>
    <description>True if the CPI is active</description>
    <formula>mcdm_15__Journey_Approvals_Plugin__r.mcdm_15__IsActive__c</formula>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>