force-app/main/default/objects/mcdm_15__ObjectPlugin__c/fields/mcdm_15__Campaign__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>DM CPI Links</relationshipLabel>
    <relationshipName>ObjectPlugins</relationshipName>
    <type>Lookup</type>
</CustomField>