force-app/main/default/objects/mcdm_15__ObjectPlugin__c/fields/mcdm_15__CPI_Name__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__CPI_Name__c</fullName>
    <description>Name of the CPI component</description>
    <formula>mcdm_15__Journey_Approvals_Plugin__r.mcdm_15__Component_Name__c</formula>
    <label>CPI Name</label>
    <type>Text</type>
</CustomField>